public/less/chat/ChatPanel.less
@import './../variables.less';

.chat-panel {
	//position: absolute;
	bottom: 0px;
	margin-right: 20px;
	box-shadow: 0px 0px 10px #aaa;
	visibility: visible;

	position: relative;
	display: block;
	float: left;
	width: 220px;

	.chat-panel-background-wrapper {
		//height: 68px;
		overflow: hidden;
		position: absolute;
		display: block;
		top: 0px;
		left: 0px;
		width: 220px;
		height: 28px;
		.chat-panel-background-image {
			border-color: rgba(0,0,0,0);
			background-repeat: no-repeat;
			background-position: center;
			background-size: 100%;
			height: 200%;
			width: 100%;
			top: 0px;
			position: absolute;
	 		filter: blur(10px);
		}
	}

	.chat-panel-header {
		background-color: #666;
		padding: 3px 10px;
		text-align: center;

		.chat-panel-head {
			display: flex;
			align-items: center;
			justify-content: flex-end;
			a.bevy-name {
				flex-grow: 1;
				z-index: 1;
				color: #fff;
				text-align: left;
				text-shadow: 0px 0px 5px rgba(0,0,0,.5);
				&:hover, &:active, &:focus {
					text-decoration: none;
					color: #e6e6e6;
				}
			}

			.glyphicon.btn {
				padding: 0px;
				color: #ccc;
				text-shadow: 0px 0px 5px rgba(0,0,0,.5);
				margin-left: 10px;
				&:hover, &:active, &:focus {
					color: #ddd;
				}
			}
		}
	}

	.chat-panel-body {
		background-color: #eee;
		padding: 3px 5px;

		.chat-panel-input {
			background-color: #fff;
			width: 100%;
			.chat-text-field {
				.form-group {
					margin-bottom: 0px;
					input {
						border-radius: 0px;
					}
				}
			}
		}
	}
}

